Fix table touch events for horizontal scroll

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -96,3 +96,13 @@
 .table__horizontal-scroll > div {
   height: 1px;
 }
+@media (max-width: 768px) {
+  .table__body * {
+    pointer-events: none;
+  }
+  .table__body a,
+  .table__body button,
+  .table__body select {
+    pointer-events: auto;
+  }
+}
